Fixed alignment of cover art on front page

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -107,6 +107,7 @@ a.readmore {
     background:#fff;
     padding:1px;
     margin-left:5px;
+    margin-bottom:5px;
 }
 
 li.guest .name a,
